--- a/footer.html
+++ b/footer.html
@@ -60,9 +60,9 @@
         your enquiry! Our team will get back to you soon.
       </div>
     </div>
-    <div class="footer-gov-stamp">
-      <img src="goverment_stanp.png" alt="Government Stamp" />
-    </div>
+  </div>
+  <div class="footer-stamp-center">
+    <img src="goverment_stanp.png" alt="Government Stamp" />
   </div>
   <style>
     footer {
@@ -228,6 +228,19 @@
     }
     .footer-gov-stamp img {
       width: 380px;
+      height: auto;
+      display: block;
+    }
+    .footer-stamp-center {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 2rem 0 0.5rem 0;
+    }
+    .footer-stamp-center img {
+      width: 380px;
+      max-width: 90vw;
       height: auto;
       display: block;
     }
